add: API put for update services
