# routes/v1/admin/services.js
@@ -54,35 +54,6 @@ router.get("/", async (req, res) => {
 	}
 });
 
-// router.get("/:id", async (req, res) => {
-// 	// #swagger.tags = ["Admin/Service"]
-// 	// #swagger.summary = "Get service by id"
-// 	const serviceId = Number(req.params.id);
-// 	try {
-// 		const service = await prisma.services.findUnique({
-// 			where: {
-// 				id: serviceId,
-// 			},
-// 			include: {
-// 				category: {
-// 					select: {
-// 						category_name: true,
-// 					},
-// 				},
-// 			},
-// 		});
-// 		const serviceById = {
-// 			...service,
-// 			category: service.category.category_name,
-// 		};
-// 		res.json({
-// 			data: serviceById,
-// 		});
-// 	} catch (error) {
-// 		console.error(error);
-// 	}
-// });
-
 router.get("/:id", async (req, res) => {
 	// #swagger.tags = ["Admin/Service"]
 	// #swagger.summary = "Get service by id"
@@ -106,11 +77,11 @@ router.get("/:id", async (req, res) => {
 				service_id: serviceId,
 			},
 		});
-    const serviceDetail = {
-      ...service,
-      category: service.category.category_name,
-      subServices: subservices,
-    }
+		const serviceDetail = {
+			...service,
+			category: service.category.category_name,
+			subServices: subservices,
+		};
 
 		res.json({
 			data: serviceDetail,
@@ -138,6 +109,22 @@ router.delete("/:id", async (req, res) => {
 				message: `Not found serviceId: ${serviceId}`,
 			});
 		} else {
+			const subServicesToDelete = await prisma.sub_services.findMany({
+				where: {
+					service_id: Number(existServiceId.id), // ใช้ ID ของบริการ (service) ที่คุณต้องการลบ
+				},
+			});
+			
+			if(subServicesToDelete) {
+				for (const subService of subServicesToDelete) {
+					await prisma.sub_services.delete({
+						where: {
+							id: subService.id,
+						},
+					});
+				}
+				
+			}
 			await prisma.services.delete({
 				where: {
 					id: serviceId,
@@ -158,22 +145,22 @@ router.post("/", async (req, res) => {
 	const { service_name, category_name, pic_service, items } = req.body;
 	try {
 		// 1. ค้นหาหมวดหมู่ด้วยชื่อ
-    const category = await prisma.categories.findFirst({
-      where: {
-        category_name: category_name
-      }
-    });
+		const category = await prisma.categories.findFirst({
+			where: {
+				category_name: category_name,
+			},
+		});
 		// 2. ตรวจสอบว่าหมวดหมู่มีอยู่หรือไม่
-    if (!category) {
-      res.status(400).json({
-        message: `Category '${category_name}' not found.`
-      });
-    }
+		if (!category) {
+			res.status(400).json({
+				message: `Category '${category_name}' not found.`,
+			});
+		}
 
 		const serviceResult = await prisma.services.findMany({
 			where: {
-				service_name: service_name
-			}
+				service_name: service_name,
+			},
 		});
 		if (serviceResult.length > 0) {
 			res.status(400).json({
@@ -181,24 +168,26 @@ router.post("/", async (req, res) => {
 				message: `${service_name} has been in database.`,
 			});
 		} else {
-
 			const maxId = await prisma.services.aggregate({
 				_max: {
-					id: true
-				}
+					id: true,
+				},
 			});
-			
-			console.log("Last service ID : ", maxId._max.id);			
+
+			console.log("Last service ID : ", maxId._max.id);
 			await prisma.services.create({
 				data: {
 					id: maxId._max.id + 1, // ยังมีปัญหาตรงนี้ ต้องแก้มือก่อน
 					service_name: service_name,
 					category_id: category.id,
 					pic_service: pic_service,
-					createAt: new Date(new Date().getTime() - new Date().getTimezoneOffset() * 60000).toISOString(),
-					updateAt: new Date(new Date().getTime() - new Date().getTimezoneOffset() * 60000).toISOString(),
-
-				}
+					createAt: new Date(
+						new Date().getTime() - new Date().getTimezoneOffset() * 60000
+					).toISOString(),
+					updateAt: new Date(
+						new Date().getTime() - new Date().getTimezoneOffset() * 60000
+					).toISOString(),
+				},
 			});
 
 			const serviceId = await prisma.services.findFirst({
@@ -212,15 +201,15 @@ router.post("/", async (req, res) => {
 				});
 			}
 
-			console.log("service ID: ", serviceId)
+			console.log("service ID: ", serviceId);
 			console.log("Items", items);
 
 			const maxSubServiceId = await prisma.sub_services.aggregate({
 				_max: {
-					id: true
-				}
+					id: true,
+				},
 			});
-	
+
 			const transformedData = items.map((item, index) => ({
 				id: maxSubServiceId._max.id + 1 + index, // ยังมีปัญหาตรงนี้ ต้องแก้มือก่อน
 				service_id: serviceId.id,
@@ -230,8 +219,8 @@ router.post("/", async (req, res) => {
 			}));
 			console.log("หลังเพิ่มข้อมูล", transformedData);
 			await prisma.sub_services.createMany({
-				data: transformedData
-			})
+				data: transformedData,
+			});
 
 			res.json({
 				service_name,
@@ -243,49 +232,81 @@ router.post("/", async (req, res) => {
 	}
 });
 
-// router.post("/subservices/", async (req, res) => {
-// 	// #swagger.tags = ["Admin/Service"]
-// 	// #swagger.summary = "Create sub service"
-// 	const { service_name, items } = req.body;
-// 	// const service_name = req.query.service
-// 	try {
-// 		const serviceId = await prisma.services.findFirst({
-// 			where: {
-// 				service_name: service_name,
-// 			},
-// 		});
-// 		if (!serviceId) {
-// 			res.json({
-// 				message: `Cannot find ${service_name}`,
-// 			});
-// 		}
-//     console.log("service ID: ", serviceId)
-// 		console.log("ของ items", items);
-//     const maxSubServiceId = await prisma.sub_services.aggregate({
-// 			_max: {
-// 				id: true
-// 			}
-// 		});
+router.put("/", async (req, res) => {
+	// #swagger.tags = ["Admin/Service"]
+	// #swagger.summary = "Update services"
+	const { id, service_name, category_name, pic_service, createAt, items } =
+		req.body;
+	try {
+		// 1. ค้นหาหมวดหมู่ด้วยชื่อ
+		const category = await prisma.categories.findFirst({
+			where: {
+				category_name: category_name,
+			},
+		});
 
-// 		const transformedData = items.map((item, index) => ({
-//       id: maxSubServiceId._max.id + 1 + index, // ยังมีปัญหาตรงนี้ ต้องแก้มือก่อน
-// 			service_id: serviceId.id,
-// 			sub_service_name: item.itemName,
-// 			price_per_unit: parseFloat(item.itemPrice),
-// 			unit: item.itemUnit,
-// 		}));
-// 		console.log("หลังเพิ่มข้อมูล", transformedData);
-//     await prisma.sub_services.createMany({
-//       data: transformedData
-//     })
-// 		res.json({
-// 			message: "Successfull",
-// 		});
-// 	} catch (error) {
-// 		res.json({
-// 			message: error,
-// 		});
-// 	}
-// });
+		await prisma.services.update({
+			where: {
+				id: Number(id),
+			},
+			data: {
+				service_name: service_name,
+				category_id: Number(category.id),
+				pic_service: pic_service,
+				createAt: createAt,
+				updateAt: new Date(
+					new Date().getTime() - new Date().getTimezoneOffset() * 60000
+				).toISOString(),
+			},
+		});
+
+		const maxSubServiceId = await prisma.sub_services.aggregate({
+			_max: {
+				id: true,
+			},
+		});
+		
+		const existingData = await prisma.sub_services.findMany({ where: { service_id: Number(id) } });
+		for (const item of existingData) {
+			// ตรวจสอบว่ามีข้อมูลใหม่สำหรับอัพเดตหรือไม่
+			const newData = items.find(newItem => newItem.id === item.id);
+		
+			if (newData) {
+				// มีข้อมูลใหม่สำหรับอัพเดต
+				await prisma.sub_services.update({
+					where: { id: item.id },
+					data: {
+						sub_service_name: newData.sub_service_name,
+						price_per_unit: parseFloat(newData.price_per_unit),
+						unit: newData.unit,
+					},
+				});
+			}
+		}
+		
+		// วนลูปเพื่อเพิ่มข้อมูลใหม่
+		for (const newDataItem of items) {
+			if (!existingData.some(existingItem => existingItem.id === newDataItem.id)) {
+				// ไม่พบข้อมูลเดิมในฐานข้อมูล จึงเป็นข้อมูลใหม่
+				await prisma.sub_services.create({
+					data: {
+						id: maxSubServiceId._max.id + 1,
+						service_id: Number(id),
+						sub_service_name: newDataItem.sub_service_name,
+						price_per_unit: parseFloat(newDataItem.price_per_unit),
+						unit: newDataItem.unit,
+					},
+				});
+			}
+		}
+
+		res.json({
+			service_name,
+			message: "update services success",
+		});
+	} catch (error) {
+		console.error(error);
+	}
+});
 
 export default router;
