# swagger-docs/swagger.json
@@ -221,6 +221,47 @@
             "description": "Bad Request"
           }
         }
+      },
+      "put": {
+        "tags": [
+          "Admin/Service"
+        ],
+        "summary": "Update services",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "example": "any"
+                },
+                "service_name": {
+                  "example": "any"
+                },
+                "category_name": {
+                  "example": "any"
+                },
+                "pic_service": {
+                  "example": "any"
+                },
+                "createAt": {
+                  "example": "any"
+                },
+                "items": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     },
     "/v1/admin/services/{id}": {
@@ -369,6 +410,10 @@
     },
     "/v1/user/subservices/{id}": {
       "get": {
+        "tags": [
+          "User/Service"
+        ],
+        "summary": "Get sub-service by id",
         "description": "",
         "parameters": [
           {
@@ -467,58 +512,6 @@
           }
         }
       }
-<<<<<<< HEAD
-=======
-    },
-    "/v1/user/services/": {
-      "get": {
-        "tags": [
-          "User/Service"
-        ],
-        "summary": "Get all services",
-        "description": "",
-        "parameters": [
-          {
-            "name": "search",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "category",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "sort",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "price",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "page",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "pageSize",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
->>>>>>> 69c2d3dc12ee4f7525fdae30f310603ab3e1fb8b
     }
   }
 }
